# knowledgevault

./: .env.local  .replit  README.md  knowledge_vault_backend.py  package-lock.json  package.json  pyproject.toml  replit.md
agents/: README.md  main.py  minimal_agents.py  requirements.txt  simple_agents.py  test_agno.py  workflows.py
attached_assets/: Pasted-AI-Personal-Knowledge-Manager-Web-MVP-PRD-TL-DR-An-AI-powered-web-based-personal-knowledge-manag-1754577508644_1754577508644.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ContentSummaryModal.tsx  KnowledgeCard.tsx  Navigation.tsx  SearchModal.tsx  UploadModal.tsx  UploadZone.tsx
client/src/lib/: queryClient.ts
client/src/pages/: WeChat.tsx  chat.tsx  home.tsx  improved-chat.tsx  landing.tsx  search.tsx  settings.tsx
docs/: wechat-integration.md
server/: agno-agent-service.ts  ai-service.ts  gemini.ts  index.ts  openai.ts  routes.ts  storage.ts  wechat-routes.ts  wechat-service.ts
shared/: schema.ts
