[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.3",
    "asyncpg>=0.30.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.116.1",
    "openai>=1.107.3",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
